<resources>
    <string name="app_name">JIT College</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="md_shahnwaz">Md Shahnwaz</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="navigation_open">Open Navigation Drawer</string>
    <string name="navigation_close">Close Navigation Drawer</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_password">Enter password</string>
    <string name="log_in">Log in</string>
    <string name="home">Home</string>
    <string name="about_us">About Us</string>
    <string name="courses">Courses</string>
    <string name="admission">Admission</string>
    <string name="life_jit">Life @ jit</string>
    <string name="placement">Placement</string>
    <string name="career">Career</string>
    <string name="contact">Contact</string>
    <string name="feedback">Feedback</string>
</resources>