<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <group>
        <item
            android:id="@+id/itemHome"
            android:title="@string/home"
            android:icon="@drawable/baseline_home_24"/>

        <item
            android:id="@+id/courses"
            android:title="@string/courses"
            android:icon="@drawable/baseline_courses_24">
        </item>
        <item
            android:id="@+id/admission"
            android:title="@string/admission"
            android:icon="@drawable/baseline_admission"/>
        <item
            android:id="@+id/life"
            android:title="@string/life_jit"
            android:icon="@drawable/baseline_life_24"/>
        <item
            android:id="@+id/placement"
            android:title="@string/placement"
            android:icon="@drawable/baseline_placement_24"/>
        <item
            android:id="@+id/career"
            android:title="@string/career"
            android:icon="@drawable/baseline_career_24"/>
        <item
            android:id="@+id/aboutUs"
            android:title="@string/about_us"
            android:icon="@drawable/baseline_about_24"/>
        <item
            android:id="@+id/contact"
            android:title="@string/contact"
            android:icon="@drawable/baseline_contact_24"/>
        <item
            android:id="@+id/feedback"
            android:title="@string/feedback"
            android:icon="@drawable/baseline_feedback_24"/>
        <item
            android:id="@+id/registration"
            android:title="@string/registration"
            android:icon="@drawable/baseline_app_registration_24"/>
        <item
            android:id="@+id/login"
            android:title="@string/login"
            android:icon="@drawable/baseline_login_24"/>
    </group>
</menu>
